Fix search bar styles on smaller screens

--- a/css/_components/search-bar.css
+++ b/css/_components/search-bar.css
@@ -23,10 +23,11 @@
     height: 100%;
     border-radius: 15px;
     border: none;
-    padding-inline: 80px 140px;
+    padding-inline: var(--fluid-45-80) var(--fluid-118-140);
     background-color: var(--color-sheet);
     color: var(--color-text);
     --color-sheet: var(--color-white);
+    font-size: inherit;
 
     &::placeholder {
       color: var(--color-queen-blue);
